crates/vescpkg-rs/tests/ui/imu_vectors_not_interchangeable.stderr
error[E0308]: mismatched types
  --> tests/ui/imu_vectors_not_interchangeable.rs:19:17
   |
19 |     update_gyro(accel);
   |     ----------- ^^^^^ expected `ImuAngularRate`, found `ImuAcceleration`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/imu_vectors_not_interchangeable.rs:4:4
   |
 4 | fn update_gyro(_: ImuAngularRate) {}
   |    ^^^^^^^^^^^ -----------------
